# fastapi-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
